git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@231 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/crmregistrovisitas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmregistrovisitas/startup.vm
@@ -152,7 +152,7 @@
                                                                 <td width="420" colspan="3">
 																	<select name="select_agente" style="width:420px;"></select>
                                                                 </td>
-                                                                <td width="25"></td>
+                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_agente"></div></td>
                                                             </tr>
                                                             <tr>
                                                                 <td width="10" height="8"></td>
@@ -219,7 +219,7 @@
                                                             <tr>
                                                                 <td width="10"></td>
                                                                 <td width="70">Hora</td>
-                                                                <td width="40" colspan="3"><input type="text" name="hora_visita" style="width:45px;" value="00:00"></td>
+                                                                <td width="40" colspan="3"><input type="text" name="hora_visita" style="width:45px;"></td>
                                                                 <!--
                                                                 <td width="5" align="center">:</td>
                                                                 <td width="20"><input type="text" name="min_visita" style="width:20px;"></td>
@@ -227,7 +227,7 @@
                                                                 <td width="55">(HH:MM)</td>
                                                                 <td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_horavisita"></div></td>
                                                                 <td width="60">Duraci&oacute;n</td>
-                                                                <td width="45" colspan="3"><input type="text" name="hora_duracion" style="width:45px;" value="00:00"></td>
+                                                                <td width="45" colspan="3"><input type="text" name="hora_duracion" style="width:45px;"></td>
                                                                 <!--
                                                                 <td width="5" align="center">:</td>
                                                                 <td width="20"><input type="text" name="min_duracion" style="width:20px;"></td>
@@ -274,7 +274,7 @@
 																<td width="350" rowspan="3">
 																	<textarea name="resultado_visita" cols="60" rows="1" style="width:350px; height:35px; resize:none;"></textarea>
                                                                 </td>
-                                                                <td width="25"></td>
+                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_resultadovisita"></div></td>
                                                             </tr>
                                                             <tr>
                                                                 <td width="10"></td>
@@ -410,7 +410,7 @@
 																	</tr>
 																	<tr>
 																		<td width="50">Hora</td>
-																		<td width="45" colspan="3" ><input type="text" name="hora_proxima_visita" style="width:45px;" value="00:00"></td>
+																		<td width="45" colspan="3" ><input type="text" name="hora_proxima_visita" style="width:45px;"></td>
 																		<!--
 																		<td width="5" align="center">:</td>
 																		<td width="20"><input type="text" name="min_proxima_visita" style="width:20px;"></td>
