git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@256 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -536,7 +536,10 @@
 											<li>
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
-													<li class="topline"><a href="../graldocs/startup.agnux">Actualizador C&oacute;digos ISO</a></li>
+													
+                                                                                                        <li class="topline"><a href="../graldocs/startup.agnux">Actualizador C&oacute;digos ISO</a></li>
+                                                                                                        <li class="topline"><a href="../graltipocambio/startup.agnux">Actualizador Tipo Cambio</a></li>
+												
 												</ul>
 											</li>
 											
