git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@271 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
@@ -175,7 +175,7 @@
                                                                 <td width="90" align="right"><a href="busca_cliente">(Buscar&nbsp;cliente)</a></td>
                                                                 <td width="15"></td>
                                                                 <td width="90"><span>Folio&nbsp;del&nbsp;Pedido</span></td>
-                                                                <td width="75"><input type="text" name="folio" style="width:75px;" ></td>
+                                                                <td width="75"><input type="text" name="folio" style="width:75px;" readOnly="true"></td>
                                                                 <td width="15"></td>
                                                             </tr>
                                                             
