--- a/erp-quimicos/src/main/webapp/vm/crmregistrovisitas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmregistrovisitas/startup.vm
@@ -75,8 +75,7 @@
 				<td width="20">&nbsp;</td>
 				<td width="200">
 					<select name="busqueda_agente" style="width:200px;">
-						<option value="0" selected="yes">[--  --]</option>
-						<option value="1">Cliente</option>
+						<option value="0" >[-- Selecionar Agente --]</option>
 					</select>
 				</td>
 				<td width="20"></td>
