git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@285 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
@@ -168,7 +168,7 @@
                                                                 <td width="80">No.&nbsp;Cliente</td>
                                                                 <td width="120">
                                                                     <input type="hidden" name="id_cliente" value="">
-                                                                    <input type="hidden" name="id_df" value="">
+                                                                    <input type="hidden" name="id_df" value="1">
                                                                     <input type="text" name="nocliente" style="width:120px;" readOnly="true">
                                                                 </td>
                                                                 <td width="15"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nocliente"></div></td>
