--- a/erp-quimicos/src/main/webapp/vm/facdevoluciones/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/facdevoluciones/startup.vm
@@ -174,6 +174,7 @@
                                                                 <td width="80">Razon&nbsp;social</td>
                                                                 <td colspan="8" width="405">
                                                                     <input type="hidden" name="id_cliente" value="">
+                                                                    <input type="hidden" name="id_df" value="1">
                                                                     <INPUT TYPE="hidden" name="rfccliente" style="width:120px;" readOnly="true">
 																	<INPUT TYPE="text" name="razoncliente" style="width:420px;" readOnly="true">
 																</td>
