git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@288 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/css/modalbox/productos/formaProducts.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/productos/formaProducts.css
@@ -190,3 +190,31 @@ table tr td.grid2 {
 	text-align: right;
 	vertical-align: top;
 }
+
+/*Boton para subir imagenes*/
+#upload_button_img {
+    width:150px;
+    height:20px;
+    text-align:center;
+    background-color:#999999;
+    /*background-image:url(../../../img/modalbox/botonUpload.png);*/
+    color:#FFFFFF;
+    font-weight:bold;
+    padding-top:5px;
+    margin:auto;
+    cursor:pointer;
+}
+
+/*Boton para subir imagenes*/
+#upload_button_pdf {
+    width:150px;
+    height:20px;
+    text-align:center;
+    background-color:#999999;
+    /*background-image:url(../../../img/modalbox/botonUpload.png);*/
+    color:#FFFFFF;
+    font-weight:bold;
+    padding-top:5px;
+    margin:auto;
+    cursor:pointer;
+}
